--- a/src/components/Performer/Performer.css
+++ b/src/components/Performer/Performer.css
@@ -28,10 +28,12 @@ body {
    margin: 0 5px;
 }
 
-p {
+.description {
+   display: block;
    width: 90%;
    margin: 20px auto;
    font-style: italic;
+   line-height: 1.3rem;
 }
 
 button {
@@ -50,24 +52,37 @@ button:hover {
    background-color: rgb(209, 209, 209);
 }
 
+.productList {
+   width: 90%;
+   margin: 0 auto;
+   display: grid;
+   grid-gap: 10px;
+}
+
 @media only screen and (min-width: 1024px) {
    .profile {
       display: grid;
       grid-template-columns: 1fr 1fr;
       justify-content: center;
       align-items: center;
-      width: 70%;
+      width: 90%;
    }
-   p {
+   .description {
       width: 80%;
       line-height: 1.8rem;
       letter-spacing: 1px;
       font-size: 18px;
    }
+   .productList {
+      grid-template-columns: repeat(3, 1fr);
+   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-   p {
+   .description {
       width: 80%;
+   }
+   .productList {
+      grid-template-columns: repeat(2, 1fr);
    }
 }
