--- a/src/components/Performer/Performer.css
+++ b/src/components/Performer/Performer.css
@@ -53,7 +53,7 @@ button:hover {
 }
 
 .productList {
-   width: 90%;
+   width: 95%;
    margin: 0 auto;
    display: grid;
    grid-gap: 10px;
@@ -68,10 +68,12 @@ button:hover {
       width: 90%;
    }
    .description {
-      width: 80%;
+      width: 60%;
       line-height: 1.8rem;
       letter-spacing: 1px;
       font-size: 18px;
+      padding-right: 10%;
+      margin-left: 0;
    }
    .productList {
       grid-template-columns: repeat(3, 1fr);
